# DISSCO-2.2.0

./: .gitignore  BUILDING_LINUX.md  BUILDING_MACOS.md  BUILDING_WINDOWS.md  CMakeLists.txt  CMakePresets.json  DISSCOVersions.txt  README.md  ROADMAP.md  test_save_functionality.md
CMOD/: CMakeLists.txt
CMOD/src/: Bottom.cpp  Bottom.h  CMOD.h  Define.h  Event.cpp  Event.h  EventParser.cpp  EventParser.h  FileValue.cpp  FileValue.h  Libraries.h  Matrix.cpp  ModParser.cpp  Modifier.cpp  NotationScore.cpp  Note.cpp  Output.cpp  Patter.cpp  Random.cpp  Random.h  Rational.h  Section.cpp  Sieve.cpp  Tempo.h  TimeSignature.h  Utilities.cpp  Utilities.h  piece-experimental.cpp
CMOD/src/muParser/: muParser.h  muParserBytecode.cpp
LASS/: CMakeLists.txt
LASS/examples/: samplemultipan1.cpp  sampletransient1.cpp
LASS/src/: AllPassFilter.cpp  AllPassFilter.h  AuWriter.cpp  DynamicVariable.cpp  DynamicVariable.h  DynamicVariableSequenceIterator.h  EnvelopeIterator.h  EnvelopeLibrary.h  Filter.h  Interpolator.cpp  LPCombFilter.cpp  LPCombFilter.h  LowPassFilter.cpp  LowPassFilter.h  MarkovModel.h  MultiPan.cpp  MultiPan.h  Pan.cpp  Pan.h  Reverb.cpp  Score.cpp  Score.h  Semaphore.h  Spatializer.cpp  Spatializer.h  StandardHeaders.h
LASSIE/: .qmake.stash  CMakeCache.txt  CMakeLists.txt  LASSIE.pro  cmake_install.cmake  moc_EnvLibDrawingArea.cpp  moc_EnvelopeLibraryWindow.cpp  moc_mainwindow.cpp  moc_predefs.h  qrc_resources.cpp  ui_EnvelopeLibraryWindow.h  ui_mainwindow.h
LASSIE/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
LASSIE/LASSIE.app/Contents/: Info.plist
LASSIE/LASSIE_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
LASSIE/LASSIE_autogen/3YJK5W5UP7/: qrc_resources.cpp
LASSIE/LASSIE_autogen/UVLADIE3JM/: moc_EnvLibDrawingArea.cpp  moc_EnvLibDrawingArea.cpp.d  moc_EnvelopeLibraryWindow.cpp  moc_EnvelopeLibraryWindow.cpp.d  moc_MarkovModelLibraryWindow.cpp  moc_MarkovModelLibraryWindow.cpp.d  moc_ProjectViewController.cpp  moc_ProjectViewController.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
LASSIE/LASSIE_autogen/include/: ui_EnvelopeLibraryWindow.h  ui_MarkovModelLibraryWindow.h  ui_ProjectViewController.h  ui_mainwindow.h
LASSIE/OLD/src/: EnvLibDrawingArea.cpp  EnvLibDrawingArea.h  EnvelopeLibraryEntry.cpp  EnvelopeLibraryEntry.h  FunctionGenerator.cpp  MainWindow.cpp  ProjectViewController.cpp
LASSIE/resources/: resources.qrc
LASSIE/resources/styles/: main.qss
LASSIE/src/: EnvLibDrawingArea.cpp  EnvLibDrawingArea.h  EnvLibDrawingArea.hpp  EnvelopeLibraryEntry.cpp  EnvelopeLibraryEntry.h  EnvelopeLibraryEntry.hpp  EnvelopeLibraryWindow.cpp  EnvelopeLibraryWindow.h  EnvelopeLibraryWindow.hpp  EnvelopeLibraryWindow.ui  IEvent.cpp  IEvent.hpp  MainWindow.cpp  MarkovModel.cpp  MarkovModel.hpp  MarkovModelLibraryWindow.cpp  MarkovModelLibraryWindow.h  MarkovModelLibraryWindow.hpp  MarkovModelLibraryWindow.ui  NoteEvent.cpp  NoteEvent.hpp  ObjectWindow.cpp  ObjectWindow.hpp  PaletteViewController.cpp  PaletteViewController.hpp  Project.cpp  Project.hpp  ProjectViewController.cpp  ProjectViewController.h  ProjectViewController.hpp  ProjectViewController.ui  envelopewindow.cpp  envelopewindow.hpp  inst.cpp  inst.hpp  lassie.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  (+6 more)
LASSIE/src/UI/: Attributes.ui  CheckObjectNameExists.ui  DuplicateObjectDialog.ui  EnvelopeLibraryWindow.ui  FileNewObject.ui  FunGenMakeEnvelopeSubAlignment.ui  FunGenREVPartialAlignment.ui  FunGenSPAChannelAlignment.ui  FunGenSPAPartialAlignment.ui  FunGenSelectSubAlignment.ui  FunGenStochosSubAlignment.ui  FunctionGenerator.ui  HelpAbout.ui  MarkovModelLibraryWindow.ui  MarkovWindow.ui  Modifier.ui  NoteModifiersConfiguration.ui  ObjectWindow.ui  PaletteInsertTypeMismatch.ui  PaletteViewController.ui  Partial.ui  PartialSubAlignment.ui  ProjectPropertiesDialog.ui  ProjectViewController.ui  RawList.ui  RunDialog.ui  SoundAttributes.ui  WarningNoDatLibDialog.ui  mainwindow.ui  partialmodi.ui
LASSIE/src/core/: EnvelopeLibraryEntry.cpp  EnvelopeLibraryEntry.hpp  IEvent.cpp  IEvent.h  LayerReferenceUtils.hpp  envelope_struct.cpp  envelope_struct.hpp  event_struct.hpp  project_struct.cpp  project_struct.hpp  xmlparser.hpp  xmlwriter.hpp
LASSIE/src/dialogs/: FileNewObject.cpp  FileNewObject.hpp  FunctionGenerator.cpp  FunctionGenerator.hpp  ProjectPropertiesDialog.hpp
LASSIE/src/ui/: Attributes.ui  FileNewObject.ui  FunGenREVPartialAlignment.ui  FunGenSPAChannelAlignment.ui  FunGenSPAPartialAlignment.ui  FunctionGenerator.ui  Modifiers.ui  mainwindow.ui
LASSIE/src/widgets/: EnvLibDrawingArea.cpp  EnvLibDrawingArea.hpp  EventAttributesViewController.cpp  EventAttributesViewController.hpp  FunctionEntryRow.hpp  LayerBox.cpp  LayerBox.hpp  MakeEnvelopeRow.cpp  MakeEnvelopeRow.hpp  Modifiers.cpp  Modifiers.hpp  PaletteViewController.cpp  PaletteViewController.hpp  Partials.cpp  Partials.hpp  ProjectViewController.cpp  ProjectViewController.hpp  REVChannel.cpp  REVChannel.hpp  REVPartialAlignment.cpp  REVPartialAlignment.hpp  SPAChannel.cpp  SPAChannel.hpp  SPAChannelAlignment.cpp  SPAChannelAlignment.hpp  SPAPartialAlignment.cpp  SPAPartialAlignment.hpp  Select.cpp  Select.hpp  Stochos.cpp  Stochos.hpp
LASSIE/src/windows/: EnvLibDrawingArea.cpp  EnvLibDrawingArea.h  EnvLibDrawingArea.hpp  EnvelopeCommand.cpp  EnvelopeCommand.hpp  EnvelopeLibraryEntry.cpp  EnvelopeLibraryEntry.h  EnvelopeLibraryEntry.hpp  EnvelopeLibraryPaletteEvent.hpp  EnvelopeLibraryWindow.cpp  EnvelopeLibraryWindow.h  EnvelopeLibraryWindow.hpp  EventAttributesViewController.cpp  EventAttributesViewController.h  EventAttributesViewController.hpp  FileNewObject.hpp  FunctionGenerator.cpp  FunctionGenerator.h  FunctionGenerator.hpp  LASSIE.h  MainWindow.cpp  MainWindow.h  MainWindow.hpp  MarkovChain.cpp  MarkovChain.hpp  MarkovModelLibraryWindow.cpp  MarkovModelLibraryWindow.h  (+25 more)
external-libs/muParser/: CMakeLists.txt  muParser.cpp  muParserBase.cpp  muParserBase.h  muParserBytecode.cpp  muParserDef.h  muParserError.h  muParserFixes.h  muParserToken.h  muParserTokenReader.cpp  muParserTokenReader.h
(+611 files in other folders)
